--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -55,96 +55,6 @@
       allow_aggregations: true
 - table:
     schema: public
-    name: moped_categories
-  insert_permissions:
-  - role: moped-admin
-    permission:
-      check: {}
-      columns:
-      - category_name
-      - category_id
-      - active_category
-      - on_street
-      - sensitivity
-      - category_order
-      - date_added
-      backend_only: false
-  - role: moped-editor
-    permission:
-      check: {}
-      columns:
-      - category_name
-      - category_id
-      - active_category
-      - on_street
-      - sensitivity
-      - category_order
-      - date_added
-      backend_only: false
-  select_permissions:
-  - role: moped-admin
-    permission:
-      columns:
-      - active_category
-      - on_street
-      - sensitivity
-      - category_id
-      - category_order
-      - category_name
-      - date_added
-      filter: {}
-      allow_aggregations: true
-  - role: moped-editor
-    permission:
-      columns:
-      - active_category
-      - on_street
-      - sensitivity
-      - category_id
-      - category_order
-      - category_name
-      - date_added
-      filter: {}
-      allow_aggregations: true
-  - role: moped-viewer
-    permission:
-      columns:
-      - category_name
-      - category_id
-      - active_category
-      - on_street
-      - sensitivity
-      - category_order
-      - date_added
-      filter: {}
-      allow_aggregations: true
-  update_permissions:
-  - role: moped-admin
-    permission:
-      columns:
-      - active_category
-      - on_street
-      - sensitivity
-      - category_id
-      - category_order
-      - category_name
-      - date_added
-      filter: {}
-      check: null
-  - role: moped-editor
-    permission:
-      columns:
-      - active_category
-      - on_street
-      - sensitivity
-      - category_id
-      - category_order
-      - category_name
-      - date_added
-      filter: {}
-      check: {}
-- table:
-    schema: public
     name: moped_city_fiscal_years
   insert_permissions:
   - role: moped-admin
@@ -814,107 +724,6 @@
       - subphases
       filter: {}
       check: {}
-- table:
-    schema: public
-    name: moped_proj_categories
-  insert_permissions:
-  - role: moped-admin
-    permission:
-      check: {}
-      columns:
-      - project_id
-      - category_name
-      - proj_category_id
-      - date_added
-      - added_by
-      backend_only: false
-  - role: moped-editor
-    permission:
-      check: {}
-      columns:
-      - project_id
-      - category_name
-      - proj_category_id
-      - date_added
-      - added_by
-      backend_only: false
-  select_permissions:
-  - role: moped-admin
-    permission:
-      columns:
-      - added_by
-      - proj_category_id
-      - project_id
-      - category_name
-      - date_added
-      filter: {}
-      allow_aggregations: true
-  - role: moped-editor
-    permission:
-      columns:
-      - added_by
-      - proj_category_id
-      - project_id
-      - category_name
-      - date_added
-      filter: {}
-      allow_aggregations: true
-  - role: moped-viewer
-    permission:
-      columns:
-      - project_id
-      - category_name
-      - proj_category_id
-      - date_added
-      - added_by
-      filter: {}
-      allow_aggregations: true
-  update_permissions:
-  - role: moped-admin
-    permission:
-      columns:
-      - added_by
-      - proj_category_id
-      - project_id
-      - category_name
-      - date_added
-      filter: {}
-      check: null
-  - role: moped-editor
-    permission:
-      columns:
-      - added_by
-      - proj_category_id
-      - project_id
-      - category_name
-      - date_added
-      filter: {}
-      check: null
-  event_triggers:
-  - name: activity_log_moped_proj_categories
-    definition:
-      enable_manual: false
-      insert:
-        columns: '*'
-      delete:
-        columns: '*'
-      update:
-        columns:
-        - added_by
-        - proj_category_id
-        - project_id
-        - category_name
-        - date_added
-    retry_conf:
-      num_retries: 0
-      interval_sec: 10
-      timeout_sec: 60
-    webhook_from_env: MOPED_API_EVENTS_URL
-    headers:
-    - name: MOPED_API_APIKEY
-      value_from_env: MOPED_API_APIKEY
-    - value: activity_log
-      name: MOPED_API_EVENT_NAME
 - table:
     schema: public
     name: moped_proj_communication
@@ -4209,6 +4018,31 @@
       - added_by
       filter: {}
       check: {}
+  event_triggers:
+  - name: activity_log_moped_project_types
+    definition:
+      enable_manual: false
+      insert:
+        columns: '*'
+      delete:
+        columns: '*'
+      update:
+        columns:
+        - added_by
+        - project_id
+        - project_type_id
+        - type_name
+        - date_added
+    retry_conf:
+      num_retries: 0
+      interval_sec: 10
+      timeout_sec: 60
+    webhook_from_env: MOPED_API_EVENTS_URL
+    headers:
+    - name: MOPED_API_APIKEY
+      value_from_env: MOPED_API_APIKEY
+    - value: activity_log
+      name: MOPED_API_EVENT_NAME
 - table:
     schema: public
     name: moped_status
