--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -2132,6 +2132,10 @@
 - table:
     schema: public
     name: moped_proj_funding
+  object_relationships:
+  - name: moped_fund_source
+    using:
+      foreign_key_constraint_on: funding_source_id
   insert_permissions:
   - role: moped-admin
     permission:
@@ -3734,6 +3738,13 @@
         table:
           schema: public
           name: moped_proj_features
+  - name: moped_proj_funding
+    using:
+      foreign_key_constraint_on:
+        column: project_id
+        table:
+          schema: public
+          name: moped_proj_funding
   - name: moped_proj_notes
     using:
       foreign_key_constraint_on:
