--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -3769,6 +3769,7 @@
       - project_priority
       - project_sponsor
       - project_uuid
+      - project_website
       - start_date
       - status_id
       - timeline_id
@@ -3798,6 +3799,7 @@
       - project_priority
       - project_sponsor
       - project_uuid
+      - project_website
       - start_date
       - status_id
       - timeline_id
@@ -3827,6 +3829,7 @@
       - project_priority
       - project_sponsor
       - project_uuid
+      - project_website
       - start_date
       - status_id
       - timeline_id
@@ -3855,6 +3858,7 @@
       - project_priority
       - project_sponsor
       - project_uuid
+      - project_website
       - start_date
       - status_id
       - timeline_id
@@ -3883,6 +3887,7 @@
       - project_priority
       - project_sponsor
       - project_uuid
+      - project_website
       - start_date
       - status_id
       - timeline_id
@@ -3912,6 +3917,7 @@
       - project_priority
       - project_sponsor
       - project_uuid
+      - project_website
       - start_date
       - status_id
       - timeline_id
@@ -3941,6 +3947,7 @@
       - project_priority
       - project_sponsor
       - project_uuid
+      - project_website
       - start_date
       - status_id
       - timeline_id
