show moped types in project signal table

--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -3540,6 +3540,13 @@
         table:
           schema: public
           name: moped_proj_components
+  - name: moped_project_types
+    using:
+      foreign_key_constraint_on:
+        column: project_id
+        table:
+          schema: public
+          name: moped_project_types
   - name: moped_proj_features
     using:
       foreign_key_constraint_on:
@@ -4075,6 +4082,10 @@
 - table:
     schema: public
     name: moped_project_types
+  object_relationships:
+  - name: moped_type
+    using:
+      foreign_key_constraint_on: project_type_id
   insert_permissions:
   - role: moped-admin
     permission:
