Add hasura permissions for knack_project_id

--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -3555,6 +3555,7 @@
       - end_date
       - fiscal_year
       - is_retired
+      - knack_project_id
       - milestone_id
       - project_description
       - project_description_public
@@ -3582,6 +3583,7 @@
       - end_date
       - fiscal_year
       - is_retired
+      - knack_project_id
       - milestone_id
       - project_description
       - project_description_public
@@ -3609,6 +3611,7 @@
       - end_date
       - fiscal_year
       - is_retired
+      - knack_project_id
       - milestone_id
       - project_description
       - project_description_public
@@ -3636,6 +3639,7 @@
       - end_date
       - fiscal_year
       - is_retired
+      - knack_project_id
       - milestone_id
       - project_description
       - project_description_public
@@ -3663,6 +3667,7 @@
       - end_date
       - fiscal_year
       - is_retired
+      - knack_project_id
       - milestone_id
       - project_description
       - project_description_public
@@ -3691,6 +3696,7 @@
       - end_date
       - fiscal_year
       - is_retired
+      - knack_project_id
       - milestone_id
       - project_description
       - project_description_public
@@ -3718,6 +3724,7 @@
       - end_date
       - fiscal_year
       - is_retired
+      - knack_project_id
       - milestone_id
       - project_description
       - project_description_public
