--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -4109,64 +4109,77 @@
     permission:
       check: {}
       columns:
+      - added_by
+      - date_added
+      - id
       - project_id
       - project_type_id
-      - date_added
-      - added_by
+      - status_id
       backend_only: false
   - role: moped-editor
     permission:
       check: {}
       columns:
+      - added_by
+      - date_added
+      - id
       - project_id
       - project_type_id
-      - date_added
-      - added_by
-      backend_only: false
+      - status_id
   select_permissions:
   - role: moped-admin
     permission:
       columns:
+      - added_by
+      - date_added
+      - id
       - project_id
       - project_type_id
-      - date_added
-      - added_by
+      - status_id
       filter: {}
   - role: moped-editor
     permission:
       columns:
+      - added_by
+      - date_added
+      - id
       - project_id
       - project_type_id
-      - date_added
-      - added_by
+      - status_id
       filter: {}
   - role: moped-viewer
     permission:
       columns:
+      - added_by
+      - date_added
+      - id
       - project_id
       - project_type_id
-      - date_added
-      - added_by
+      - status_id
       filter: {}
   update_permissions:
   - role: moped-admin
     permission:
       columns:
+      - added_by
+      - date_added
+      - id
       - project_id
       - project_type_id
-      - date_added
-      - added_by
+      - status_id
       filter: {}
-      check: {}
+      check: null
   - role: moped-editor
     permission:
       columns:
+      - added_by
+      - date_added
+      - id
       - project_id
       - project_type_id
-      - date_added
-      - added_by
+      - status_id
       filter: {}
-      check: {}
+      check: null
   event_triggers:
   - name: activity_log_moped_project_types
     definition:
