--- a/.github/workflows/atd_moped_build_stage.yml
+++ b/.github/workflows/atd_moped_build_stage.yml
@@ -27,6 +27,7 @@ jobs:
         run: |
           sudo apt-get install -y python3-setuptools
           pip3 install awscli boto3 virtualenv requests
+          npm install npm@latest && echo "Updated npm to version: $(npm --version)"
       # Run the shell commands using the AWS environment variables
       - name: "Build & Deploy Moped Editor"
         env:
