--- a/.github/workflows/atd_moped_build_stage.yml
+++ b/.github/workflows/atd_moped_build_stage.yml
@@ -19,6 +19,9 @@ jobs:
         with:
           python-version: "3.8"
           architecture: "x64"
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '16'
       # Get the code first
       - name: "Checkout"
         uses: actions/checkout@v2
@@ -42,10 +45,8 @@ jobs:
           echo "ACTION/BRANCH_NAME: ${BRANCH_NAME}"
           echo "MOPED_PRNUM: ${MOPED_PRNUM}"
           echo "PWD: $(pwd)"
-          npm install -g npm@latest && echo "Updated npm to version: $(npm --version)"
           echo "Node Version: $(node --version)"
           echo " NPM Version: $(npm --version)"
-
           source $(pwd)/.github/workflows/aws-heroku-helper.sh
           echo "Commented out editor build"
           build_editor
