--- a/.github/workflows/atd_moped_build_stage.yml
+++ b/.github/workflows/atd_moped_build_stage.yml
@@ -19,6 +19,9 @@ jobs:
         with:
           python-version: "3.8"
           architecture: "x64"
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '16'
       # Get the code first
       - name: "Checkout"
         uses: actions/checkout@v2
