Better to encode field mappings in the environment

--- a/moped-etl/environment_moped_dev_knack.env.template
+++ b/moped-etl/environment_moped_dev_knack.env.template
@@ -1,5 +1,7 @@
-ETL_ENVIRONMENT=
 KNACK_DATA_TRACKER_SCENE=
 KNACK_DATA_TRACKER_VIEW=
 KNACK_DATA_TRACKER_APP_ID=
+KNACK_OBJECT_PROJECT_ID=
+KNACK_OBJECT_PROJECT_NAME=
+KNACK_OBJECT_CURRENT_STATUS=
 HASURA_ENDPOINT=
