Update local REACT_APP_AWS_CLOUDFRONT

--- a/moped-editor/.env-cmdrc
+++ b/moped-editor/.env-cmdrc
@@ -6,7 +6,7 @@
     "REACT_APP_HASURA_ENDPOINT": "http://localhost:8080/v1/graphql",
     "REACT_APP_API_ENDPOINT": "http://localhost:5000",
     "REACT_APP_HASURA_ENV": "local",
-    "REACT_APP_AWS_CLOUDFRONT": "https://moped.austinmobility.io",
+    "REACT_APP_AWS_CLOUDFRONT": "https://moped-pr-local.austinmobility.io",
     "REACT_APP_AWS_COGNITO_REDIRECT_SIGN_IN": "https://localhost:3000/moped/session/signin",
     "REACT_APP_AWS_COGNITO_REDIRECT_SIGN_OUT": "https://localhost:3000/moped/session/signin",
     "REACT_APP_AWS_COGNITO_DOMAIN": "atd-moped-staging.auth.us-east-1.amazoncognito.com",
