Update commentary description

--- a/.github/workflows/atd_moped_cloudfront_cognito.yml
+++ b/.github/workflows/atd_moped_cloudfront_cognito.yml
@@ -1,5 +1,6 @@
 #
-# Builds SQS Triggers for the ATD-Events
+# Builds the Cognito-at-edge validator from:
+# https://github.com/awslabs/cognito-at-edge
 #
 name: "Build & Deploy CloudFront Cognito Auth"
 
