--- a/.github/workflows/atd_cognito_hooks_build.yml
+++ b/.github/workflows/atd_cognito_hooks_build.yml
@@ -9,12 +9,12 @@ on:
       - main
       - production
     paths:
-      - "moped-auth/**"
+      - "moped-auth/cognito-pre-token-hook/**"
   pull_request:
     paths:
       - ".github/workflows/atd_cognito_hooks_build.yml"
       - ".github/workflows/aws-cognito-helper.sh"
-      - "moped-auth/**"
+      - "moped-auth/cognito-pre-token-hook/**"
 jobs:
   build:
     name: Build
