--- a/.github/workflows/atd_moped_cloudfront_cognito.yml
+++ b/.github/workflows/atd_moped_cloudfront_cognito.yml
@@ -9,7 +9,11 @@ on:
     branches:
       - main
       - production
-
+    paths:
+      - "moped-auth/cloudfront-cognito-at-edge/**"
+      - ".github/workflows/atd_moped_cloudfront_cognito.yml"
+      - ".github/workflows/aws-moped-cognito-edge-helper.sh"
+  pull_request:
     paths:
       - "moped-auth/cloudfront-cognito-at-edge/**"
       - ".github/workflows/atd_moped_cloudfront_cognito.yml"
