Add more env key, value pairs

--- a/moped-etl/environment_moped_dev_knack.env.template
+++ b/moped-etl/environment_moped_dev_knack.env.template
@@ -5,3 +5,6 @@ KNACK_OBJECT_PROJECT_ID=
 KNACK_OBJECT_PROJECT_NAME=
 KNACK_OBJECT_CURRENT_STATUS=
 HASURA_ENDPOINT=
+HASURA_ADMIN_KEY=
+HASURA_MAX_ATTEMPTS=5
+HASURA_RETRY_WAIT_TIME=5
