--- a/moped-etl/Dockerfile
+++ b/moped-etl/Dockerfile
@@ -6,7 +6,7 @@ FROM python:3.8-alpine3.10
 
 RUN mkdir /app && mkdir /app/tmp && mkdir /data
 
-RUN apk add bash build-base python3-dev 
+RUN apk add bash build-base python3-dev vim
 
 RUN pip install requests awscli web-pdb sodapy boto3 knackpy
 
