Add IGNORE_BRANCH flag

--- a/.github/workflows/atd_moped_build_stage.yml
+++ b/.github/workflows/atd_moped_build_stage.yml
@@ -178,6 +178,7 @@ jobs:
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          IGNORE_BRANCH: "TRUE"
         run: |
           export BRANCH_NAME=${GITHUB_REF##*/}
           echo "SHA: ${GITHUB_SHA}"
