Rename context name

--- a/moped-editor/.env-cmdrc
+++ b/moped-editor/.env-cmdrc
@@ -33,7 +33,7 @@
       "REACT_APP_KNACK_DATA_TRACKER_VIEW": 3047,
       "REACT_APP_KNACK_DATA_TRACKER_APP_ID": "6167314778435d001ea3e7cb"
     },
-  "netlify": {
+  "netlifypr": {
     "REACT_APP_AWS_COGNITO_REGION": "us-east-1",
     "REACT_APP_AWS_COGNITO_USER_POOL_ID": "us-east-1_U2dzkxfTv",
     "REACT_APP_AWS_COGNITO_APP_CLIENT_ID": "3u9n9373e37v603tbp25gs5fdc",
