--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -16,6 +16,7 @@
     "build:staging": "env-cmd -e staging npm run build:local",
     "build:development": "env-cmd -e development npm run build:local",
     "build:production": "env-cmd -e production npm run build:local",
+    "build:netlifypr": "env-cmd -e netlifypr npm run build:local",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
