Add permissions for new column

--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -4751,6 +4751,7 @@
       - project_uuid
       - start_date
       - status_id
+      - status_name
       - timeline_id
       - updated_at
       filter: {}
@@ -4782,6 +4783,7 @@
       - project_uuid
       - start_date
       - status_id
+      - status_name
       - timeline_id
       - updated_at
       filter: {}
@@ -4813,6 +4815,7 @@
       - project_uuid
       - start_date
       - status_id
+      - status_name
       - timeline_id
       - updated_at
       filter: {}
