System to utilize requirements files for this and future ETL apps

--- a/moped-etl/Dockerfile
+++ b/moped-etl/Dockerfile
@@ -8,11 +8,15 @@ RUN mkdir /app && mkdir /app/tmp && mkdir /data
 
 RUN apk add bash build-base python3-dev vim
 
-RUN pip install requests awscli web-pdb sodapy boto3 knackpy
+RUN mkdir /requirements
+COPY requirements /requirements
+# Add a new <app_name>_requirements.txt in the requirements folder to have the libraries installed at image build time
+RUN ls -1 /requirements/ | xargs -I {} pip install -r /requirements/{}
 
 WORKDIR /app
 
 COPY app /app
+
 
 EXPOSE 5555/tcp
 
