Define ENV variable for signal field name

--- a/moped-etl/environment_moped_dev_knack.env.template
+++ b/moped-etl/environment_moped_dev_knack.env.template
@@ -5,6 +5,7 @@ KNACK_DATA_TRACKER_VIEW=
 KNACK_OBJECT_PROJECT_ID=
 KNACK_OBJECT_PROJECT_NAME=
 KNACK_OBJECT_CURRENT_STATUS=
+KNACK_OBJECT_SIGNALS=
 HASURA_ENDPOINT=
 HASURA_ADMIN_KEY=
 HASURA_MAX_ATTEMPTS=5
