--- a/moped-database/docker-compose.x86_64.yml
+++ b/moped-database/docker-compose.x86_64.yml
@@ -8,7 +8,7 @@ services:
     #   and access configuration (user, db, password) are all the same.
     #
     moped-pgsql:
-        image: "postgis/postgis:12-master"
+        image: "postgis/postgis:12-3.2-alpine"
         volumes:
             - moped-db-vol:/var/lib/postgresql/data
         expose:
