Volume configuration is shared configuration

--- a/moped-database/docker-compose.yml
+++ b/moped-database/docker-compose.yml
@@ -5,3 +5,9 @@
 version: '3.7'
 
 # Currently we have multiplatform images in the stack, and this file is reserved for when we do.
+
+
+# We do have a volume which is shared
+volumes:
+    moped-db-vol:
+        driver: local
