--- a/moped-database/docker-compose.yml
+++ b/moped-database/docker-compose.yml
@@ -3,43 +3,11 @@
 #
 
 version: '3.7'
-services:
-    #
-    # Local PostgreSQL database
-    #   Note: Attempted using the leanest version (alpine), feel free
-    #   to use any other image, as long as the port configuration
-    #   and access configuration (user, db, password) are all the same.
-    #
-    moped-pgsql:
-        image: postgis/postgis:12-master
-        volumes:
-            - moped-db-vol:/var/lib/postgresql/data
-        expose:
-            - 5432
-        ports:
-            - 5432:5432
-        environment:
-            - POSTGRES_USER=moped
-            - POSTGRES_PASSWORD=moped
-            - POSTGRES_DB=moped
 
-    hasura:
-        image: hasura/graphql-engine:v1.3.2
-        restart: always
-        depends_on:
-            - moped-pgsql
-        expose:
-            - 8080
-        ports:
-            - 8080:8080
-        environment:
-            - HASURA_GRAPHQL_ENABLE_CONSOLE=false
-            - HASURA_GRAPHQL_ENABLE_TELEMETRY=false
-            - HASURA_GRAPHQL_DATABASE_URL=postgres://moped:moped@moped-pgsql:5432/moped
-            - MOPED_API_ACTIONS_URL=http://localhost:5000/actions
-            - MOPED_API_EVENTS_URL=http://localhost:5000/events
-            - MOPED_API_APIKEY=DuMmyApiKeyHFVOVto19otC1wX6sP2N0VSKrCD70L10B7Sm525ZR6L672i2F79M9!
+# Currently we have no multiplatform images in the stack, and this file is reserved for when we do.
 
+
+# We do have a volume which is shared
 volumes:
     moped-db-vol:
         driver: local
