Clean up comments and whitespace in docker-compose files

--- a/moped-database/docker-compose.yml
+++ b/moped-database/docker-compose.yml
@@ -1,13 +1,11 @@
-#
-# MOPED Development Environment
-#
+# Architecture Independent Docker Stack Components for Moped Development Environment
 
 version: '3.7'
 
-# Currently we have no multiplatform images in the stack, and this file is reserved for when we do.
+# Currently we have no multiplatform images in the stack,
+# and this file is reserved for when we do.
 
-
-# We do have a volume which is shared
+# There is a volume which is common
 volumes:
     moped-db-vol:
         driver: local
