--- a/moped-database/docker-compose.x86_64.yml
+++ b/moped-database/docker-compose.x86_64.yml
@@ -1,12 +1,7 @@
+# X86_64 Builds for Intel Macs, Windows, most Linux, etc.
 version: '3.7'
 services:
 
-    #
-    # Local PostgreSQL database
-    #   Note: Attempted using the leanest version (alpine), feel free
-    #   to use any other image, as long as the port configuration
-    #   and access configuration (user, db, password) are all the same.
-    #
     moped-pgsql:
         image: "postgis/postgis:12-3.2-alpine"
         volumes:
@@ -19,7 +14,6 @@ services:
             - POSTGRES_USER=moped
             - POSTGRES_PASSWORD=moped
             - POSTGRES_DB=moped
-
 
     hasura:
         image: hasura/graphql-engine:v1.3.2
@@ -37,4 +31,3 @@ services:
             - MOPED_API_ACTIONS_URL=http://localhost:5000/actions
             - MOPED_API_EVENTS_URL=http://localhost:5000/events
             - MOPED_API_APIKEY=DuMmyApiKeyHFVOVto19otC1wX6sP2N0VSKrCD70L10B7Sm525ZR6L672i2F79M9!
-
