--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -51,7 +51,7 @@
     "@turf/combine": "^6.5.0",
     "@turf/polygon-to-line": "^6.5.0",
     "apollo-boost": "^0.4.9",
-    "atd-kickstand": "https://github.com/cityofaustin/atd-kickstand.git#f71e4d3d6ddea09263410d93432c254ef2ed1793",
+    "atd-kickstand": "cityofaustin/atd-kickstand#f71e4d3d6ddea09263410d93432c254ef2ed1793",
     "aws-amplify": "^3.3.4",
     "axios": "^0.21.2",
     "chart.js": "^2.9.4",
